pdf and fixed date table

--- a/docs/Design/MIS/MIS.tex
+++ b/docs/Design/MIS/MIS.tex
@@ -50,11 +50,11 @@ urlcolor=cyan          % color of external links
 
 \section{Revision History}
 
-\begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
+\begin{tabularx}{\textwidth}{p{3cm}p{3cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
 January 18 2023 & 1.0 & Initial Draft\\
-April 4 2023 & Added followers and updated modules to align with previous documents better \\
+April 4 2023 & 2.0 & Added followers and updated modules to align with previous documents better \\
 \bottomrule
 \end{tabularx}
 
