pdf and table fix

--- a/docs/SRS/SRS.tex
+++ b/docs/SRS/SRS.tex
@@ -32,8 +32,8 @@
 	urlcolor=cyan           % color of external links
 }
 
-% \input{../Comments}
-% \input{../Common}
+\input{../Comments}
+\input{../Common}
 
 % For easy change of table widths
 \newcommand{\colZwidth}{1.0\textwidth}
@@ -149,7 +149,7 @@
 \midrule
 October 1, 2022 & 1.0 & Volere template outline, Functional Requirements\\
 October 5, 2022 & 1.1 & Completed and submitted SRS document\\
-April 4, 2023 & 2.0 & Revision 1
+April 4, 2023 & 2.0 & Revision 1 \\
 \bottomrule
 \end{tabularx}
 
@@ -673,15 +673,9 @@ Description: The product shall be able to visually display fitness progress towa
 			\hline
 			& R1 & R2 & R3 & R4 & R5 & R6 & R7 & R8 & R9 & R10 & R11 \\ \hline
 			NFR4 &X & & & & & & & & & & \\ \hline
-			NFR8 &X &X &X & & & & & & & & \\ \hline
-			NFR9 & & & & & & &X & & & & \\ \hline % 6
-			NFR10 & & & & & & &X &X & & & \\ \hline % 7,8
-			NFR11 & & & & & & &X &X & & &\\ \hline % 7,8
-			NFR12 & & & & & & &X &X & & & \\ \hline % 7,8
-			NFR13 &X & & & & &X &X & & & & \\ \hline % 1,7,8
-			NFR18 &X & & & &X & &X & &X &X &X \\ \hline % 11,10,9,7,5,1
-			NFR20 & & & & & &X & &X & & & \\ \hline % 6,8
-			NFR22 &X & & & &X & &X & &X &X &X \\ \hline % 11,10,9,7,5,1	
+			NFR7 & & & & & & & &X & & & \\ \hline
+			NFR8 & & & & & & &X & & & & \\ \hline
+			
 		\end{tabular}
 		\caption{Non-Functional to Functional Requirement Dependency Matrix}
 		\label{Table:R_trace}
